src/SdlSharp.ImGui.Native/dear_bindings/dcimgui.h

typedef struct ImVector_char_t ImVector_char;
typedef struct ImGuiTextBuffer_t ImGuiTextBuffer;                              // Helper to hold and append into a text buffer (~string builder)
struct ImVector_char_t { int Size; int Capacity; char* Data; };  // Instantiation of ImVector<char>
// Helper: Growable text buffer for logging/accumulating text
// (this could be called 'ImGuiTextBuilder' / 'ImGuiStringBuilder')
struct ImGuiTextBuffer_t
{
    ImVector_char Buf;
};
CIMGUI_API const char* ImGuiTextBuffer_begin(const ImGuiTextBuffer* self);
CIMGUI_API const char* ImGuiTextBuffer_end(const ImGuiTextBuffer* self);                                                  // Buf is zero-terminated, so end() will point on the zero-terminator
CIMGUI_API int         ImGuiTextBuffer_size(const ImGuiTextBuffer* self);
CIMGUI_API bool        ImGuiTextBuffer_empty(const ImGuiTextBuffer* self);
CIMGUI_API void        ImGuiTextBuffer_clear(ImGuiTextBuffer* self);
CIMGUI_API void        ImGuiTextBuffer_resize(ImGuiTextBuffer* self, int size);                                           // Similar to resize(0) on ImVector: empty string but don't free buffer.
CIMGUI_API void        ImGuiTextBuffer_reserve(ImGuiTextBuffer* self, int capacity);
CIMGUI_API const char* ImGuiTextBuffer_c_str(const ImGuiTextBuffer* self);
CIMGUI_API void        ImGuiTextBuffer_append(ImGuiTextBuffer* self, const char* str, const char* str_end /* = NULL */);
CIMGUI_API void        ImGuiTextBuffer_appendf(ImGuiTextBuffer* self, const char* fmt, ...) IM_FMTARGS(2);
CIMGUI_API bool   ImGui_ComboObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count); // Implied popup_max_height_in_items = -1
CIMGUI_API bool   ImGui_ComboObsoleteEx(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int popup_max_height_in_items /* = -1 */);
CIMGUI_API bool   ImGui_ListBoxObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count); // Implied height_in_items = -1
CIMGUI_API bool   ImGui_ListBoxObsoleteEx(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int height_in_items /* = -1 */);