src/Sdl3Sharp.ImGui/Native/ImGuiTextBuffer.cs

// <auto-generated>
// This file was generated by Sdl3Sharp.ImGui.Generator
// Do not modify this file directly.
// </auto-generated>

#nullable enable

using System.Runtime.InteropServices;

namespace Sdl3Sharp.ImGui.Native;

/// <summary>
/// Helper: Growable text buffer for logging/accumulating text
/// (this could be called 'ImGuiTextBuilder' / 'ImGuiStringBuilder')
/// </summary>
[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct ImGuiTextBuffer
{
    public ImVector_char Buf;

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiTextBuffer_begin")]
    public static partial byte* begin(ImGuiTextBuffer* self);

    /// <summary>
    /// Buf is zero-terminated, so end() will point on the zero-terminator
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiTextBuffer_end")]
    public static partial byte* end(ImGuiTextBuffer* self);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiTextBuffer_size")]
    public static partial int size(ImGuiTextBuffer* self);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiTextBuffer_empty")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool empty(ImGuiTextBuffer* self);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiTextBuffer_clear")]
    public static partial void clear(ImGuiTextBuffer* self);

    /// <summary>
    /// Similar to resize(0) on ImVector: empty string but don't free buffer.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiTextBuffer_resize")]
    public static partial void resize(ImGuiTextBuffer* self, int size);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiTextBuffer_reserve")]
    public static partial void reserve(ImGuiTextBuffer* self, int capacity);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiTextBuffer_c_str")]
    public static partial byte* c_str(ImGuiTextBuffer* self);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiTextBuffer_append")]
    public static partial void append(ImGuiTextBuffer* self, byte* str, byte* str_end);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGuiTextBuffer_appendf")]
    public static partial void appendf(ImGuiTextBuffer* self, byte* fmt);

}
